--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: whitesmoke;
-  overflow-x: hidden;
+  background-color: rgb(234, 237, 237);
+
 }
 
 code {
